# services/panel/internal/domain/users/model.go
@@ -30,6 +30,7 @@ type User struct {
 	Email        string
 	PasswordHash string
 	Role         Role
+	AvatarURL    string
 	CreatedAt    time.Time
 	UpdatedAt    time.Time
 }
